--- a/static/style.css
+++ b/static/style.css
@@ -447,4 +447,5 @@ blockquote {
     border-left: 0.3em solid var(--border);
     padding: 0.1em 0.7em;
     background-color: var(--bg-surface0);
+    word-break: break-all;
 }
