--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,6 @@
 }
 
 :root {
-
     color-scheme: light dark;
 
     --max-width: 47rem;
@@ -123,8 +122,11 @@ body {
 }
 
 nav.bar {
-    /*background-color: var(--bg-header);*/
-    background: linear-gradient(to right, hsl(from rgb(var(--dull-lavender-400)) calc(h + 10) calc(s - 10) calc(l - 3)), rgb(var(--dull-lavender-400)));
+    background: linear-gradient(
+        to right,
+        hsl(from rgb(var(--dull-lavender-400)) calc(h + 10) calc(s - 10) calc(l - 3)),
+        rgb(var(--dull-lavender-400))
+    );
 }
 
 nav.bar::after {
@@ -133,12 +135,20 @@ nav.bar::after {
     height: 2px;
     width: 100%;
 
-    background: linear-gradient(to right, hsl(from var(--border-header) calc(h + 20) calc(s + 10) calc(l + 3)), var(--border-header));
+    background: linear-gradient(
+        to right,
+        hsl(from var(--border-header) calc(h + 20) calc(s + 10) calc(l + 3)),
+        var(--border-header)
+    );
 }
 
 @media (max-width: 425px) {
     nav.bar {
-        background: linear-gradient(35deg, hsl(from rgb(var(--dull-lavender-400)) calc(h + 10) calc(s - 10) calc(l - 3)), rgb(var(--dull-lavender-400)));
+        background: linear-gradient(
+            35deg, 
+            hsl(from rgb(var(--dull-lavender-400)) calc(h + 10) calc(s - 10) calc(l - 3)),
+            rgb(var(--dull-lavender-400))
+        );
     }
 
     nav.bar > ul {
@@ -198,86 +208,78 @@ main {
     font-family: "DM Sans", sans-serif;
     margin: 1rem;
     max-width: calc(100vw - 2rem);
-
-    a {
-        color: var(--anchor);
-
-        &:visited {
-            color: var(--anchor-visited);
-        }
-
-        &:hover, &:focus {
-            text-decoration: none;
-        }
-
-        &:active {
-            color: var(--anchor-active);
-        }
-    }
-
-    & h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        font-family: "Cascadia Code", sans-serif;
-        font-feature-settings: "zero";
-        font-weight: 500;
-        margin-bottom: 0.5rem;
-    }
-
-    & code, & pre {
-        font-family: "Cascadia Code", sans-serif;
-        font-feature-settings: "zero";
-        font-weight: 300;
-    }
-
-    & img:not(.raw) {
-        max-width: 100%;
-        height: auto;
-        border: 1px solid rgb(53 50 68);
-        border-radius: 0.5rem;
-    }
-
-    /* & .page-section,
-    section {
-    } */
-
+    
     & > * {
         max-width: min(var(--max-width), 100%);
         margin-left: auto;
         margin-right: auto;
     }
+}
 
-    & #title {
-        font-size: 2rem;
-        margin-bottom: 0.2rem;
+a {
+    color: var(--anchor);
+
+    &:visited {
+        color: var(--anchor-visited);
     }
 
-    & .metadata {
-        /* make italic */
-        font-family: "DM Sans Italic", sans-serif;
-        color: var(--subtext);
-        margin-bottom: 1rem;
-        display: flex;
-        flex-direction: row;
-        gap: 1rem;
+    &:hover, &:focus {
+        text-decoration: none;
     }
 
-    & .table-of-contents {
-        background-color: var(--bg-surface0);
-        list-style: none;
-        padding-inline-start: 0;
-        padding: 1rem;
+    &:active {
+        color: var(--anchor-active);
+    }
+}
 
-        & h3 {
-            margin-top: 0;
-        }
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Cascadia Code", sans-serif;
+    font-feature-settings: "zero";
+    font-weight: 500;
+    margin-bottom: 0.5rem;
+}
 
-        & a {
-            color: var(--text);
-        }
+code, pre {
+    font-family: "Cascadia Code", sans-serif;
+    font-feature-settings: "zero";
+    font-weight: 300;
+}
+
+img:not(.raw) {
+    max-width: 100%;
+    height: auto;
+    border: 1px solid rgb(53 50 68);
+    border-radius: 0.5rem;
+}
+
+
+#title {
+    font-size: 2rem;
+    margin-bottom: 0.2rem;
+}
+
+.metadata {
+    /* make italic */
+    font-family: "DM Sans Italic", sans-serif;
+    color: var(--subtext);
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.table-of-contents {
+    background-color: var(--bg-surface0);
+    list-style: none;
+    padding-inline-start: 0;
+    padding: 1rem;
+
+    & h3 {
+        margin-top: 0;
+    }
+
+    & a {
+        color: var(--text);
     }
 }
 
@@ -291,8 +293,8 @@ footer {
     align-items: center;
     justify-content: space-between;
     border-top: 2px solid var(--border-header);
+    
     @media (max-width: 768px) {
-
         flex-direction: row-reverse;
     }
 }
@@ -405,8 +407,6 @@ pre[lang="ansi"] {
 .card-stack > a {
     display: flex;
     flex-direction: column;
-
-
 }
 
 .card {
