--- a/static/style.css
+++ b/static/style.css
@@ -30,92 +30,125 @@
     font-style: normal;
 }
 
+head.forest-shade--moss-slate ~ body {
+    /* --primary-50: 233 236 208;
+    --primary-100: 224 230 193;
+    --primary-200: 202 218 164;
+    --primary-300: 175 206 136;
+    --primary-400: 143 194 107;
+    --primary-500: 106 183 78;
+    --primary-600: 71 148 61;
+    --primary-700: 46 112 47;
+    --primary-800: 31 76 38;
+    --primary-900: 16 40 23;
+    --primary-950: 9 22 14; */
+    
+    --primary-50: 208 236 226;
+    --primary-100: 193 230 219;
+    --primary-200: 164 218 207;
+    --primary-300: 136 206 198;
+    --primary-400: 107 194 193;
+    --primary-500: 78 174 183;
+    --primary-600: 61 133 148;
+    --primary-700: 46 94 112;
+    --primary-800: 31 59 76;
+    --primary-900: 16 29 40;
+    --primary-950: 9 15 22;
+    
+
+    --secondary-50: 217 227 217;
+    --secondary-100: 205 218 207;
+    --secondary-200: 182 201 186;
+    --secondary-300: 158 183 167;
+    --secondary-400: 135 166 149;
+    --secondary-500: 111 149 133;
+    --secondary-600: 89 120 111;
+    --secondary-700: 67 91 87;
+    --secondary-800: 46 62 61;
+    --secondary-900: 24 32 32;
+    --secondary-950: 13 17 18;
+
+    --accent: hsl(from rgb(var(--secondary-500)) h calc(s + 9) calc(l + 2));
+    --bg: light-dark(rgb(var(--secondary-200)), rgb(var(--secondary-950)));
+}
+
+:root {
+    --primary-50: 247 244 254;
+    --primary-100: 239 235 252;
+    --primary-200: 227 218 250;
+    --primary-300: 206 189 245;
+    --primary-400: 180 151 238;
+    --primary-500: 155 109 229;
+    --primary-600: 140 77 218;
+    --primary-700: 124 59 198;
+    --primary-800: 104 49 166;
+    --primary-900: 87 42 136;
+    --primary-950: 54 25 92;
+
+    --secondary-50: 243 243 250;
+    --secondary-100: 233 234 246;
+    --secondary-200: 214 214 239;
+    --secondary-300: 189 189 228;
+    --secondary-400: 167 162 215;
+    --secondary-500: 148 138 202;
+    --secondary-600: 131 114 185;
+    --secondary-700: 113 96 162;
+    --secondary-800: 93 80 131;
+    --secondary-900: 77 69 106;
+    --secondary-925: 55 49 76;
+    --secondary-950: 34 30 46;
+    --secondary-975: 17 15 23;
+
+    --accent: rgb(var(--primary-400));
+}
+
 :root {
     color-scheme: light dark;
 
     --max-width: 47rem;
-    --dull-lavender-50: 247 244 254;
-    --dull-lavender-100: 239 235 252;
-    --dull-lavender-200: 227 218 250;
-    --dull-lavender-300: 206 189 245;
-    --dull-lavender-400: 180 151 238;
-    --dull-lavender-500: 155 109 229;
-    --dull-lavender-600: 140 77 218;
-    --dull-lavender-700: 124 59 198;
-    --dull-lavender-800: 104 49 166;
-    --dull-lavender-900: 87 42 136;
-    --dull-lavender-950: 54 25 92;
 
-    --steel-gray-50: 243 243 250;
-    --steel-gray-100: 233 234 246;
-    --steel-gray-200: 214 214 239;
-    --steel-gray-300: 189 189 228;
-    --steel-gray-400: 167 162 215;
-    --steel-gray-500: 148 138 202;
-    --steel-gray-600: 131 114 185;
-    --steel-gray-700: 113 96 162;
-    --steel-gray-800: 93 80 131;
-    --steel-gray-900: 77 69 106;
-    --steel-gray-925: 55 49 76;
-    --steel-gray-950: 34 30 46;
-    --steel-gray-975: 17 15 23;
+    --bg-header: var(--accent);
+    --fg-header: rgb(var(--secondary-950));
+    --border-header: rgb(var(--secondary-700));
 
-    --accent: rgb(var(--dull-lavender-400));
-    --bg-header: rgb(var(--dull-lavender-400));
-    --fg-header: rgb(var(--steel-gray-950));
-    --border-header: rgb(var(--steel-gray-700));
+    --plain-bg: light-dark(rgb(var(--primary-50)), rgb(var(--secondary-975)));
 
-    --plain-bg: light-dark(
-        rgb(var(--dull-lavender-50)),
-        rgb(var(--steel-gray-975))
-    );
-
-    --bg: light-dark(rgb(var(--dull-lavender-200)), rgb(var(--steel-gray-950)));
+    --bg: light-dark(rgb(var(--primary-200)), rgb(var(--secondary-950)));
 
     --bg-surface0: light-dark(
-        rgb(var(--dull-lavender-100)),
-        rgb(var(--steel-gray-900))
+        rgb(var(--primary-100)),
+        rgb(var(--secondary-900))
     );
 
     --bg-surface1: light-dark(
-        rgb(var(--dull-lavender-50)),
-        rgb(var(--steel-gray-975))
+        rgb(var(--primary-50)),
+        rgb(var(--secondary-975))
     );
 
-    --text: light-dark(
-        rgb(var(--steel-gray-900)),
-        rgb(var(--dull-lavender-200))
-    );
+    --text: light-dark(rgb(var(--secondary-900)), rgb(var(--primary-200)));
 
-    --subtext: light-dark(
-        rgb(var(--steel-gray-700)),
-        rgb(var(--dull-lavender-300))
-    );
+    --subtext: light-dark(rgb(var(--secondary-700)), rgb(var(--primary-300)));
 
-    --anchor: light-dark(
-        rgb(var(--dull-lavender-700)),
-        rgb(var(--dull-lavender-400))
-    );
+    --anchor: light-dark(rgb(var(--primary-700)), rgb(var(--primary-400)));
 
     --anchor-visited: light-dark(
-        rgb(var(--steel-gray-700)),
-        rgb(var(--steel-gray-400))
+        rgb(var(--secondary-700)),
+        rgb(var(--secondary-400))
     );
 
     --anchor-active: light-dark(
-        rgb(var(--dull-lavender-950)),
-        rgb(var(--dull-lavender-100))
+        rgb(var(--primary-950)),
+        rgb(var(--primary-100))
     );
 
-    --border: light-dark(
-        rgb(var(--dull-lavender-800)),
-        rgb(var(--steel-gray-600))
-    );
+    --border: light-dark(rgb(var(--primary-800)), rgb(var(--secondary-600)));
 
     --border-surface0: light-dark(
-        rgb(var(--dull-lavender-800)),
-        rgb(var(--steel-gray-600))
+        rgb(var(--primary-800)),
+        rgb(var(--secondary-600))
     );
+
+    --preview: light-dark(rgb(var(--secondary-200)), rgb(var(--secondary-950)));
 }
 
 body {
@@ -134,11 +167,8 @@ body {
 nav.bar {
     background: linear-gradient(
         to right,
-        hsl(
-            from rgb(var(--dull-lavender-400)) calc(h + 10) calc(s - 10)
-                calc(l - 3)
-        ),
-        rgb(var(--dull-lavender-400))
+        hsl(from var(--accent) calc(h + 10) calc(s - 10) calc(l - 3)),
+        var(--accent)
     );
 }
 
@@ -159,11 +189,8 @@ nav.bar::after {
     nav.bar {
         background: linear-gradient(
             35deg,
-            hsl(
-                from rgb(var(--dull-lavender-400)) calc(h + 10) calc(s - 10)
-                    calc(l - 3)
-            ),
-            rgb(var(--dull-lavender-400))
+            hsl(from rgb(var(--accent)) calc(h + 10) calc(s - 10) calc(l - 3)),
+            rgb(var(--accent))
         );
     }
 
@@ -441,10 +468,7 @@ pre[lang="ansi"] {
     .preview {
         max-width: 100%;
         aspect-ratio: 16 / 9;
-        background: light-dark(
-            rgb(var(--steel-gray-200)),
-            rgb(var(--steel-gray-950))
-        );
+        background: var(--preview);
         display: flex;
         flex-direction: column;
 
