--- a/static/style.css
+++ b/static/style.css
@@ -461,7 +461,8 @@ pre[lang="ansi"] {
     /*padding: 1em;*/
     color: var(--text);
     border: 1px solid var(--border);
-    display: block;
+    display: flex;
+    flex-direction: column;
     height: 100%;
     overflow: clip;
 
@@ -483,6 +484,7 @@ pre[lang="ansi"] {
     }
 
     .blurb {
+        flex-grow: 1;
         padding: 0.5em;
 
         span {
@@ -502,6 +504,27 @@ pre[lang="ansi"] {
                 color: var(--subtext);
                 font-size: 0.8em;
             }
+        }
+    }
+
+    .links {
+        display: flex;
+        flex-direction: row;
+        gap: 0.2em;
+        justify-content: space-evenly;
+        margin: 0.2em;
+        a {
+            color: var(--text);
+            text-decoration: none;
+            display: block;
+            background-color: var(--bg-surface1);
+            flex-grow: 1;
+            border-top: var(--border);
+            border: 1px solid var(--border);
+            padding: 0.5em 0;
+            border-radius: 0.3em;
+            //margin: 0.2em;
+            text-align: center;
         }
     }
 }
